Fix home page view on small phones

--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -14,7 +14,7 @@
   justify-content: center;
   align-items: center;
   background-color: #d2e0e2;
-  min-height: 500px;
+  min-height: 600px;
 }
 
 .photo {
